src-ken&y/objects/Item_Cross_Reference__c.object
<CustomObject>
    <customHelpPage>HelpItemCrossRef</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that the combination of Item-Supplier-Facility is consigned</description>
        <inlineHelpText>A check mark indicates that the cross reference is consigned material.</inlineHelpText>
        <label>Consigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Reference_Type__c</fullName>
        <description>Defines the type of cross reference be it supplier/manufacturer or UPC</description>
        <inlineHelpText>For sourcing purposes. Options include Supplier, Manufacturer.</inlineHelpText>
        <label>Cross Reference Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Reference_Value__c</fullName>
        <description>Supplier/Manufacturer Part ID</description>
        <label>Cross Reference Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Internal item part of this item cross ref</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Item Cross References</relationshipLabel>
        <relationshipName>Item_Cross_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max_Per_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Per Day</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Per_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Per Month</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Per_Week__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Per Week</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Per_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min Per Day</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Per_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min Per Month</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Per_Week__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min Per Week</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Shelf_Life_In_Days__c</fullName>
        <description>Minimum shelf life in days to use when receiving this supplier Item.</description>
        <label>Minimum Shelf Life In Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ordering_Multiple__c</fullName>
        <inlineHelpText>The order quantity multiple specified by the supplier. For example, if the multiple is 5, you can order 5, 10, 15 or any other multiple of 5. To manage the default value, go to the Item Detail page.</inlineHelpText>
        <label>Ordering Multiple</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this is a tie breaker for any policy criteria which is defined.</description>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_By_Date__c</fullName>
        <description>Date by which this relationship should be reviewed</description>
        <label>Review By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_to_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Limits the cross reference to the  selected  facility. If blank, the cross reference applies to all facilities in your organization.</inlineHelpText>
        <label>Ship-to Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Item Cross References</relationshipLabel>
        <relationshipName>Item_Cross_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sourcing_Policy_Criteria__c</fullName>
        <description>This defines the criteria to use while determining the sequence &amp; priority of the suppliers</description>
        <inlineHelpText>Sourcing Policy Criteria defines the criteria to use while determining the sequence of suppliers</inlineHelpText>
        <label>Policy Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed %</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Oldest Agreement</fullName>
                </value>
                <value>
                    <fullName>Expiring Soonest</fullName>
                </value>
                <value>
                    <fullName>Lowest Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sourcing_Policy_Fixed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the defined % of this Item into this facility which should be given to this supplier</description>
        <label>Sourcing Policy Fixed %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sourcing_Policy_PO_Release_Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this is the supplier which should get the next order. User can set this value to desired sequence if using Oldest Contract, Expiring Soonest, Lowest Price.) For fixed % there will need to be some sort of calculation of current % vs defined fixed % to determine which supplier should get the next PO</description>
        <inlineHelpText>Sourcing Policy PO Release Sequence, specifies the supplier which should get the next order in sequence.</inlineHelpText>
        <label>Policy PO Release Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchasing supplier for this cross reference</description>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Item Cross References</relationshipLabel>
        <relationshipName>Item_Cross_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Item Cross References</relationshipLabel>
        <relationshipName>Item_Cross_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Vendor specific unit price</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Item Cross Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Ship_to_Facility__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Active__c</columns>
        <columns>Review_By_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Cross Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Cross References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>